Round Robin Flow/objects/Assignment_Members__c/Assignment_Members__c.object-meta.xml
<CustomObject>
    <label>Assignment Members</label>
    <nameField>
        <displayFormat>LAM - {0000}</displayFormat>
        <label>Lead Assignment Group Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assignment Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>