Round Robin Flow/objects/Assignment_Members__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <formula>IF(OR(!Agent__r.IsActive,AND(Out_of_office_Start__c &lt;= NOW(), Out_of_office_End__c &gt;= NOW())),false,true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>