Round Robin Flow/objects/Assignment_Members__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Lead_Assignment_Members</relationshipName>
    <type>Lookup</type>
</CustomField>