Round Robin Flow/objects/Assignment_Members__c/fields/Last_Assigned_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Assigned_Time__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Last Assigned Time</label>
    <type>DateTime</type>
</CustomField>