Round Robin Flow/objects/Assignment_Members__c/fields/Lead_Assignment_Group__c.field-meta.xml
<CustomField>
    <fullName>Lead_Assignment_Group__c</fullName>
    <label>Lead Assignment Group</label>
    <referenceTo>Assignment_Group__c</referenceTo>
    <relationshipName>Lead_Assignment_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>