Round Robin Flow/objects/Assignment_Members__c/fields/Out_of_office_End__c.field-meta.xml
<CustomField>
    <fullName>Out_of_office_End__c</fullName>
    <label>Out of office End</label>
    <type>DateTime</type>
</CustomField>