Round Robin Flow/objects/Assignment_Members__c/fields/Out_of_office_Start__c.field-meta.xml
<CustomField>
    <fullName>Out_of_office_Start__c</fullName>
    <label>Out of office Start</label>
    <type>DateTime</type>
</CustomField>